kubernetes/projects/eks-cluster/3-tier-application/kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
